# AITH-Book-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.yaml  docker-compose.yml  download_data.sh  models.py  pyproject.toml  test.py  отчет_1.txt  отчет_2.txt
.github/workflows/: ci.yml
backend/: Dockerfile  config.yaml  main.py
backend/utils/: config_loader.py  cypher_loader.py  downloader.py  graph_loader.py  llm.py  models.py  rag.py  templates.py  test_utils.py  text_extractor.py
book_data/Часть вторая/: 01_Контрабандисты.txt  02_Остров Монте-Кристо.txt  03_Волшебный блеск.txt  04_Незнакомец.txt  05_Трактир «Гарский мост».txt  06_Рассказ Кадрусса.txt  07_Тюремные списки.txt  08_Торговый дом Моррель.txt  09_Пятое сентября.txt  10_Италия. Синдбад-мореход.txt  11_Пробуждение.txt  12_Римские разбойники.txt  13_Видение.txt  14_Mazzolato.txt  15_Карнавал в Риме.txt  16_Катакомбы Сан-Себастьяно.txt  21_Остров Тибулен.txt
book_data/Часть первая/: 01_Марсель. Прибытие.txt  02_Отец и сын.txt  03_Каталанцы.txt  04_Заговор.txt  05_Обручение.txt  06_Помощник королевского прокурора.txt  07_Допрос.txt  08_Замок Иф.txt  09_Вечер дня обручения.txt  10_Малый покой в Тюильри.txt  11_Корсиканский людоед.txt  12_Отец и сын.txt  13_Сто дней.txt  14_Арестант помешанный и арестант неистовый.txt  15_Номер 34 и номер 27.txt  16_Итальянский ученый.txt  17_Камера аббата.txt  18_Сокровища аббата Фариа.txt  19_Третий припадок.txt  20_Кладбище замка Иф.txt
book_data/Часть пятая/: 01_Нам пишут из Янины.txt  02_Лимонад.txt  03_Обвинение.txt  04_Жилище булочника на покое.txt  05_Взлом.txt  06_Десница господня.txt  07_Бошан.txt  09_Суд.txt  (+12 more)
cypher/: check.cypher  create_entities.cypher  load_edges.cypher  load_nodes.cypher  retrieve.cypher
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ne04j/: creat_entities.cypher
utils/: config_loader.py  db_loader.py  download_entities.py  feature_extractor.py  graph_builder.py  graph_loader.py  llm.py  rag.py  templates.py  test_utils.py  text_extractor.py  text_splitter.py
(+78 files in other folders)
